Messaging Fixes (#665)
* Recover offer prototype function and clean up summary

* Truncate summary and attempt to reverse scroll

* Correct selector and expand progress bar

* Satisfy formatter

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -3750,6 +3750,11 @@ form .stars img {
   height: calc(100vh - 60px);
 }
 
+.conversation-col .content-container {
+  flex-grow: 1;
+  overflow: hidden;
+}
+
 .conversation-col,
 .no-gutters .conversation-col {
   background-color: white;
